Fix broken layout

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,7 @@ dl, dd, ol, ul, figure {
     margin: 0;
     padding: 0;
     line-height: 1.5; // Maintain vertical rhythm
+    word-break: break-all;
 }
 
 
